PowertoolsPlacement: UI/UX changes  - Change portlet icon from MediaWiki's Edit icon to FontAwesome's Toolbox icon (attribution given) on Citizen/Cosmos/non-supported skins  - Fixed draggable interaction on mobile

--- a/gadgets/PowertoolsPlacement/style.less
+++ b/gadgets/PowertoolsPlacement/style.less
@@ -19,6 +19,9 @@
 		direction: ltr;
 	}
 
+	// Prevents portlet from breaking on mobile
+	touch-action: none;
+
 	> div {
 		width: var( --powertools-portlet-width );
 		transition: width 300ms;
@@ -27,7 +30,7 @@
 
 	.powertools-portlet-menu-label {
 		border-radius: var( --powertools-portlet-border-radius );
-		padding: 8px 15px;
+		padding: 8px 14px;
 		box-sizing: border-box;
 		width: 100%;
 		height: 50px;
@@ -42,15 +45,18 @@
 		align-items: center;
 		position: relative;
 
-		img {
-			margin-right: 5px;
+		.powertools-icon {
+			position: absolute;
 		}
 
-		span,
-		div.crosshair {
+		.powertools-label-text {
+			margin-left: 25px;
+		}
+
+		.powertools-label-text, .crosshair {
 			visibility: hidden;
 			opacity: 0;
-			transition: visibility 500ms, opacity 500ms ease-out;
+			transition: width 200ms, visibility 300ms, opacity 300ms ease-out;
 			transition-delay: 100ms;
 		}
 	}
@@ -101,7 +107,7 @@
 			border-bottom-left-radius: var( --powertools-portlet-border-radius );
 			border-bottom-right-radius: var( --powertools-portlet-border-radius );
 
-			svg {
+			.powertools-portlet-arrow-icon svg {
 				transform: rotate( 180deg );
 			}
 		}
@@ -133,6 +139,15 @@
 		width: 20px;
 		height: 20px;
 	}
+}
+ 
+.powertools-icon {
+	content: '';
+	width: 20px !important;
+	height: 20px !important;
+}
+body.skin-citizen .powertools-icon {
+	clip-path: none !important;
 }
 
 body.skin-citizen #citizen-powertools-portlet-container__card {
